--- a/HReader.Builtin.Web/HReader.Builtin.Web.csproj
+++ b/HReader.Builtin.Web/HReader.Builtin.Web.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.2-alpha</Version>
+    <Authors>HReader</Authors>
+    <Company>HReader</Company>
+    <AssemblyVersion>0.1.2.0</AssemblyVersion>
+    <FileVersion>0.1.2.0</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HReader.Base" Version="0.1.2-alpha" />
+  </ItemGroup>
 
 </Project>
